# Mini-Search-Engine

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  path.txt  pyproject.toml
cli/: __init__.py  build_index.py  search.py
core/: __init__.py  intersection.py  inverted_index.py  proximity.py  query.py  ranking.py  snippet.py  tokenizer.py
data/processed/AA/: wiki_00  wiki_01  wiki_02  wiki_03  wiki_04  wiki_05  wiki_06  wiki_07  wiki_08  wiki_09  wiki_10  wiki_11  wiki_12  wiki_13  wiki_14  wiki_15  wiki_16  wiki_17  wiki_18  wiki_19  wiki_20  wiki_21  wiki_22  wiki_23  wiki_24  wiki_25  wiki_26  wiki_27  wiki_28  wiki_29  wiki_30  wiki_31  wiki_32  wiki_33  wiki_34  wiki_35  wiki_36  wiki_37  wiki_38  wiki_39  (+60 more)
data/processed/AB/: wiki_00  wiki_01  wiki_02  wiki_03  wiki_04  wiki_05  wiki_06  wiki_07  wiki_08  wiki_09  wiki_10  wiki_11  wiki_12  wiki_13  wiki_14  wiki_15  wiki_16  wiki_17  wiki_18  wiki_19  wiki_20  wiki_21  wiki_22  wiki_23  wiki_24  wiki_25  wiki_26  wiki_27  wiki_28  wiki_29  wiki_30  wiki_31  wiki_32  wiki_33  wiki_34  wiki_35  wiki_36  wiki_37  wiki_38  wiki_39  (+60 more)
data/processed/AC/: wiki_00  wiki_01  wiki_02  wiki_03  wiki_04  wiki_05  wiki_06  wiki_07  wiki_08  wiki_09  wiki_10  wiki_11  wiki_12  wiki_13  wiki_14  wiki_15  wiki_16  wiki_17  wiki_18  wiki_19  wiki_20  wiki_21  (+78 more)
index/: doc_map.json  meta.json  postings.pkl
tests/: test_intersection.py  test_proximity.py  test_tokenizer.py
utils/: __init__.py  io.py
wikiextractor/: extract.sh
wikiextractor/wikiextractor/: WikiExtractor.py  extract.py
(+313 files in other folders)
