[project]
name = "search-engine"
version = "0.1.0"
description = "Mini search engine with positional inverted index"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nltk>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "cli", "utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
